# structural-alternations

./: .gitignore  README.md  baseline_predictions.py  check_args.py  cls_emb.py  environment.yaml  eval.py  gen_args.py  get_args.py  multieval.py  pyproject.toml  requirements.txt  tune.py
conf/: baseline_predictions.yaml  check_args.yaml  cls_emb.yaml  eval.yaml  gen_args.yaml  get_args.yaml  multieval.yaml  nouns.txt  tune.yaml  verbs.txt
core/: embedding_classifier.py  kl_baseline_loss.py  layerwise_baseline_loss.py  run_MLM.py  tuner.py  tuner_imports.py  tuner_plots.py  tuner_utils.py
data/: syn_blork_det_test.data  syn_blork_ext.data  syn_blorked_SVO-OSV_for_human_exp.data  syn_blorked_ext.data  syn_blorked_ext_for_human_exp.data  syn_break.data  syn_break_caus_inch.data  syn_break_caus_inch_raising.data  syn_break_caus_passive.data  syn_break_caus_passive_raising.data  syn_break_caus_raising.data  syn_break_ext_for_human_exp.data  syn_buy_ext_for_human_exp.data  syn_dab_load_ext.data  syn_dab_spray_ext.data  syn_devour.data  syn_eat_ext_for_human_exp.data  syn_give.data  syn_give_do.data  syn_give_give_ext.data  syn_give_pd.data  syn_give_send_ext.data  syn_hand.data  syn_hand_give_ext.data  syn_hand_send_ext.data  syn_load.data  syn_load_load_ext.data  syn_load_spray_ext.data  syn_mail_give_ext.data  syn_mail_send_ext.data  syn_pack_load_ext.data  syn_pack_spray_ext.data  syn_read_ext_for_human_exp.data  syn_regret_ext_for_human_exp.data  syn_rub.data  syn_rub_load_ext.data  syn_rub_spray_ext.data  syn_send.data  syn_send_do.data  syn_send_give_ext.data  (+37 more)
(+650 files in other folders)
