[tool.poetry]
name = "structural-alternations"
version = "0.1.0"
description = "Examining whether pre-trained language models have understanding of structural alternations"
authors = ["Jackson Petty <research@jacksonpetty.org>"]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.0.6"
torchtext = "^0.9.1"
transformers = "^4.5.1"
numpy = "^1.20.2"
torch = "^1.8.1"
tqdm = "^4.60.0"
matplotlib = "^3.4.1"
tensorboard = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
